# gone-phishing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REVIEW-GUIDE.txt  design-iterate-contracts.json  pyproject.toml  railway.json  requirements.txt  start.sh
data/: scenarios.json
docs/: WIRING.md  architecture.md
docs/likec4/: model.c4  views.c4
n8n/: irp-escalation-workflow.json
playbooks/: README.md  bec.md  communication-plan.md  data-breach.md  full-irp-template.md  incident-categories.md  incident-report-form.md  phishing.md  ransomware.md  regulatory-requirements.md  response-phases.md  severity-classification.md  tabletop-scenarios.md
scripts/: generate_scenarios.py
server/: app.py  cl_app.py  config.py  cw_rest.py  llm.py  vector_store.py
server/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py
server/tools/: __init__.py  cw_tools.py  irp_tools.py  n8n_tools.py
tests/: conftest.py  test_adapters.py  test_api.py  test_integration.py  test_scenarios.py  test_vector_store.py
web/: index.html
